--- a/BTEJA_BCSH2_semestralka.csproj
+++ b/BTEJA_BCSH2_semestralka.csproj
@@ -5,13 +5,8 @@
     <TargetFramework>net6.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
+    <RootNamespace>IDE</RootNamespace>
+    <AssemblyName>SubKotlinIDE</AssemblyName>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Compile Remove="Interpreter\**" />
-    <EmbeddedResource Remove="Interpreter\**" />
-    <None Remove="Interpreter\**" />
-    <Page Remove="Interpreter\**" />
-  </ItemGroup>
 
 </Project>
