first half of Execution

--- a/BTEJA_semestralka/BTEJA_semestralka.csproj
+++ b/BTEJA_semestralka/BTEJA_semestralka.csproj
@@ -9,4 +9,8 @@
     <RootNamespace>InterpreterSK</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Exceptions\" />
+  </ItemGroup>
+
 </Project>
