--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,4 @@ FodyWeavers.xsd
 /Program.cs
 /BTEJA_semestralka/_Documents/Todo.txt
 /BTEJA_semestralka/_Documents/Test.txt
+/BCSH2_semestralka/_Documents/todo.txt
