--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,4 @@ FodyWeavers.xsd
 /BTEJA_semestralka/_Documents/Todo.txt
 /BTEJA_semestralka/_Documents/Test.txt
 /BCSH2_semestralka/_Documents/todo.txt
+/BCSH2_semestralka/_Documents/Test.txt
